# amita

./: .gitignore  Cargo.toml
base/amita-base/src/: lib.rs
base/amita-base/src/linear/: ols.rs
base/amita-error/: Cargo.toml
base/amita-error/src/: lib.rs
base/amita-utils/: Cargo.toml
base/amita-utils/src/: lib.rs
base/bench/: Cargo.toml
base/bench/src/: amita_linear.rs  datasets.rs
crates/amita/: Cargo.toml
crates/amita-base/: Cargo.toml
crates/amita-base/src/discrete/: logit.rs
crates/amita-base/src/linear/: ols.rs
crates/amita-discrete/: Cargo.toml
crates/amita-discrete/src/: lib.rs  logit.rs
crates/amita-error/src/: lib.rs
crates/amita-linear/: Cargo.toml
crates/amita-linear/src/: lib.rs  ols.rs
crates/amita-models/: Cargo.toml
crates/amita-models/src/did/: mod.rs  twfe.rs
crates/amita-traits/: Cargo.toml
crates/amita-traits/src/: lib.rs
crates/amita-universal/: Cargo.toml
crates/amita-universal/src/: lib.rs
crates/amita-utils/: Cargo.toml
crates/amita-utils/src/: inference.rs  iterations.rs  math.rs  traits.rs
crates/amita/src/: lib.rs
crates/bench/: Cargo.toml
crates/bench/src/: amita_discrete.rs  amita_linear.rs  datasets.rs  lib.rs  main.rs  miscellaneous.rs
crates/bench/src/models/: did.rs  mod.rs
models/cross-sectional/: Cargo.toml
models/panel/: Cargo.toml
models/panel/src/did/: twfe.rs
models/time-series/: Cargo.toml
py-amita/: Cargo.toml
py-amita/src/: lib.rs
