[workspace]
resolver = "2"
members = [
    "base/*", 
    "models/*",
    "py-amita",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["David Li"]
description = "Rust crate for econometricians"

[workspace.dependencies]
linfa-linalg = "0.1.0"
ndarray = { version = "0.15.6", features = ["serde"] }
polars = { version = "0.41.3", features = ["lazy", "ndarray"] }
thiserror = "1.0.63"
statrs = "0.17.1"
argmin = { version = "0.10.0" }
argmin-math = { version = "0.4.0", features = ["ndarray_latest-nolinalg"] }

amita = { path = "base/amita" }
amita-error = { path = "base/amita-error"}
amita-utils ={ path = "base/amita-utils" }

amita-base = { path = "base/amita-base"}
