[package]
name = "amita-base"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
ndarray = { workspace = true }
linfa-linalg = { workspace = true }
statrs = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true }

amita-error = { workspace = true }
amita-utils ={ workspace = true }