[package]
name = "amita"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
numpy = { workspace = true }
pyo3 = { workspace = true }

amita-base = { workspace = true }
amita-error = { workspace = true }
amita-utils ={ workspace = true }
